--- a/Nameste-react/package.json
+++ b/Nameste-react/package.json
@@ -1,9 +1,9 @@
 {
   "name": "new",
   "version": "1.0.0",
-  "main": "script.js",
   "scripts": {
-    "start": "node script.js",
+    "start": "parcel index.html",
+    "build": "parcel build index.html",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -11,6 +11,11 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "parcel": "^2.12.0"
+    "parcel": "^2.12.0",
+    "process": "^0.11.10"
+  },
+  "dependencies": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   }
 }
